--- a/TS-fuxi/tsconfig.json
+++ b/TS-fuxi/tsconfig.json
@@ -8,7 +8,8 @@
     "strictNullChecks": true,  //获得更严格的空类型检查，
     "removeComments": true,//编译结果移除注释
     "noEmitOnError": true,//错误时不生成编译结果
-    "esModuleInterop": true//启用es模块化交互非es模块导出
+    "esModuleInterop": true,//启用es模块化交互非es模块导出
+    "moduleResolution": "node"
     // "noImplicitUseStrict": true//编译结果中不包括“user strict”
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
