--- a/TS-fuxi/tsconfig.json
+++ b/TS-fuxi/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,//启用es模块化交互非es模块导出
     "moduleResolution": "node",
     "strictPropertyInitialization": true,
+    "noImplicitAny": true,//对索引器进行严格检查，开启对隐式any的检查
     // "noImplicitUseStrict": true//编译结果中不包括“user strict”
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
