--- a/TS-fuxi/tsconfig.json
+++ b/TS-fuxi/tsconfig.json
@@ -5,12 +5,12 @@
     "module": "commonjs", //配置编译目标使用的模块化标准
     "lib":["es2016"],//配置执行环境
     "outDir": "./dist",//编译结果目录
-    "strictNullChecks": true,  //获得更严格的空类型检查，
+    // "strictNullChecks": true,  //获得更严格的空类型检查，
     "removeComments": true,//编译结果移除注释
     "noEmitOnError": true,//错误时不生成编译结果
     "esModuleInterop": true,//启用es模块化交互非es模块导出
     "moduleResolution": "node",
-    "strictPropertyInitialization": true,
+    // "strictPropertyInitialization": true,
     "noImplicitAny": true,//对索引器进行严格检查，开启对隐式any的检查
     "noImplicitThis": true,//表示不允许this隐式的指向any
     "experimentalDecorators":true,//是否确定使用装饰器
