--- a/TS-fuxi/package.json
+++ b/TS-fuxi/package.json
@@ -1,9 +1,12 @@
 {
   "scripts": {
-    "dev":"nodemon --watch src -e ts --exec ts-node src/index.ts",
-    "build":"rd /s /q dist & tsc"
+    "dev": "nodemon --watch src -e ts --exec ts-node src/index.ts",
+    "build": "rd /s /q dist & tsc"
   },
   "devDependencies": {
     "@types/node": "^15.12.4"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.1.13"
   }
 }
