--- a/TS-fuxi/package.json
+++ b/TS-fuxi/package.json
@@ -7,6 +7,9 @@
     "@types/node": "^15.12.4"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13"
   }
 }
